--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,39 @@
   <head>
     <title>My Project</title>
     <meta charset="utf-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   </head>
   <body>
     <div id="app">
-      <h1>Hello</h1>
+     <div class="container">
+       <div class="row clearfix">
+          <div class="col-lg-12">
+              <div class="card chat-app">
+                  <div id="plist" class="people-list">
+                      <ul class="list-unstyled bot-list mt-2 mb-0">
+                          <!-- Here is the bot list render -->
+                      </ul>
+                  </div>
+                  <div class="chat">
+                      <div class="chat-header clearfix">
+                        <h6 class="m-b-0">Chat Bot</h6>
+                      </div>
+                      <section class="chat-history">
+                          <ul id="chat-list" class="m-b-0">
+                              <!-- here is the chat list render -->
+                          </ul>
+                        </section>
+                        <div class="chat-message clearfix">
+                          <div class="input-group mb-0">
+                              <button id="research" type="button" class="btn btn-primary">Send</button>
+                              <input id="search" type="text" class="form-control" placeholder="Enter text here...">
+                          </div>
+                        </div>
+                  </div>
+              </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
