Added environment variable, distibuted class in files

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                       <div class="chat-header clearfix">
                         <h6 class="m-b-0">Chat Bot</h6>
                       </div>
-                      <section class="chat-history">
+                      <section class="chat-history overflow-auto">
                           <ul id="chat-list" class="m-b-0">
                               <!-- here is the chat list render -->
                           </ul>
