--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <title>My Project</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
   </head>
   <body>
     <div id="app">
@@ -20,17 +21,15 @@
                       <div class="chat-header clearfix">
                         <h6 class="m-b-0">Chat Bot</h6>
                       </div>
-                      <section class="chat-history overflow-auto">
-                          <ul id="chat-list" class="m-b-0">
-                              <!-- here is the chat list render -->
-                          </ul>
-                        </section>
-                        <div class="chat-message clearfix">
-                          <div class="input-group mb-0">
-                              <button id="research" type="button" class="btn btn-primary">Send</button>
-                              <input id="search" type="text" class="form-control" placeholder="Enter text here...">
-                          </div>
+                      <section id="chat-list" class="chat-history overflow-auto">
+                            <!-- here is the chat list render -->
+                      </section>
+                      <div class="chat-message clearfix">
+                        <div class="input-group mb-0">
+                            <button id="research" type="button" class="btn btn-primary">Send</button>
+                            <input id="search" type="text" class="form-control" placeholder="Enter text here...">
                         </div>
+                      </div>
                   </div>
               </div>
           </div>
